# clean-code-principles-code

./: README.md
chapter1/ecommerceservice/: .gitignore  package-lock.json  package.json  server.js  server_failure.js  server_fake.js  server_real.js
chapter1/salesitemservice/: README.MD  build.gradle  settings.gradle
chapter1/salesitemservice/scratches/: rest-api.http
chapter2/mvvm/: README.md  package-lock.json  package.json
chapter2/mvvm/src/: AbstractTodoAction.ts  App.tsx  AppState.ts  Controller.ts  ListItemTodoView.tsx  StartFetchTodosAction.ts  TableRowTodoView.tsx  TodoState.ts  TodoViewProps.ts  TodosListView.tsx  TodosTableView.tsx  TodosView.tsx  ToggleDoneTodoAction.ts  createReducer.ts  index.tsx  store.ts  todosController.ts  undoActions.ts
chapter2/mvvm_angular/: README.md  angular.json  package-lock.json  package.json
chapter2/mvvm_di/: README.md  package-lock.json  package.json  tsconfig.json
chapter2/mvvm_di/src/: index.tsx
chapter2/orderservice/: README.MD  build.gradle
chapter2/orderservice_websocket_client/: package-lock.json  package.json
chapter3/either/: build.gradle  settings.gradle
chapter4/cpptests/: CMakeLists.txt  README.MD
chapter4/cpptests/src/: AnomalyDetectionEngine.h  AnomalyDetectionEngineImpl.cpp  AnomalyDetectionEngineImpl.h  AnomalyDetectionRule.h  AnomalyDetectionRulesParser.h  AnomalyDetectionRulesParserImpl.h  AnomalyIndicator.h  CMakeLists.txt  ConfigFactory.h  ConfigFactoryImpl.h  ConfigParserImpl.cpp  ConfigParserImpl.h  Configuration.h  ConfigurationImpl.h  DependencyInjector.h  MeasurementDataSource.h  MeasurementDataSourcesParser.h  MeasurementDataSourcesParserImpl.h  Singleton.h  main.cpp
chapter4/cpptests/test/: AnomalyDetectionRuleMock.h  AnomalyDetectionRulesParserMock.h  AnomalyIndicatorMock.h  CMakeLists.txt  ConfigFactoryMock.h  ConfigParserImplTests.cpp  ConfigParserImplTests.h  ConfigurationMock.h  MeasurementDataSourcesParserMock.h  MockDependenciesInjectedTest.h  MockDependencyInjector.h  main.cpp
chapter4/gbd_detroitchicago/: build.gradle  settings.gradle
chapter4/gbd_london/: build.gradle  settings.gradle
chapter5/auth_backend/: README.MD  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
chapter5/auth_backend_nest/: README.MD  package-lock.json  package.json
chapter5/auth_frontend/: README.md  package-lock.json  package.json  tsconfig.json
chapter6/apidesign/: README.MD  build.gradle  settings.gradle
chapter6/chatmsgserver_backend/: README.MD  app.ts  docker-compose.yml  package-lock.json  package.json  tsconfig.json
chapter6/chatmsgserver_frontend/: README.md  package-lock.json  package.json
chapter6/salesitemservice/: README.MD  package-lock.json  package.json
chapter6/salesitemservice_expressjs/: README.MD  package-lock.json  package.json
chapter6/salesitemservice_graphql/: README.MD  package-lock.json  package.json  tsconfig.json
chapter6/sse_backend/: README.MD  loanApplicationSummariesSubscriptionHandler.js  package-lock.json  package.json  publishLoanApplicationSummary.js  server.js  subscribers.js
chapter6/sse_frontend/: package-lock.json  package.json
(+658 files in other folders)
